Add SimpleModel example

--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>onnx.js | Mocha Tests</title>
+    <title>WebML Polyfill | Mocha Tests</title>
     <link href="https://cdn.rawgit.com/mochajs/mocha/v3.0.2/mocha.css" rel="stylesheet" />
   </head>
   <body>
