--- a/test/index.html
+++ b/test/index.html
@@ -12,11 +12,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
   
     <script src="/dist/webml-polyfill.js"></script>
-  
+    <script src="/test/utils.js"></script>
+
     <script>
       mocha.setup('bdd');
     </script>
     <script src="/test/base/base.js"></script>
+    <script src="/test/operations/add.js"></script>
+    <script src="/test/operations/mul.js"></script>
     <script>
       mocha.globals(['jQuery']);
       mocha.run();
