--- a/examples/mobilenet/index.html
+++ b/examples/mobilenet/index.html
@@ -8,6 +8,8 @@
     <script src="/dist/webml-polyfill.js"></script>
     <script src="./flatbuffers/js/flatbuffers.js"></script>
     <script src="./schema/schema_generated.js"></script>
+    <script src="TfLiteModelUtils.js"></script>
+    <script src="MobileNet.js"></script>
     <script src="main.js"></script>
     <script>
       window.onload = function() {
