--- a/examples/mobilenet/index.html
+++ b/examples/mobilenet/index.html
@@ -5,14 +5,19 @@
     <title>WebML MobileNet Demo</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <style>
-      img {
-        max-width: 500px;
-        max-height: 500px;
-      }
       canvas {
         display: none;
         position: absolute;
         z-index: -3;
+      }
+      .progress-label {
+        float: left;
+        margin-right: 1em;
+        height: 1rem;
+        font-size: .75rem;
+      }
+      .top-margin {
+        margin-top:10px;
       }
     </style>
   </head>
@@ -21,16 +26,22 @@
       <span class="navbar-brand mb-0 h1">WebML MobileNet Demo</span>
     </nav>
     <div class="container" id="container">
-      <div class="row" style="margin-top:10px;">
+      <div id="progressContainer">
+        <div class="progress-label">Loading Model:</div>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="progressBar">0%</div>
+        </div>
+      </div>
+      <div class="row top-margin">
         <div class="col">
         </div>
         <div class="col-8" align="center">
-          <img id="image" crossorigin="anonymous" class="img-fluid" alt="Responsive image"></img>
+          <img id="image" crossorigin="anonymous" class="img-fluid" alt="Responsive image" src="./img/bee_eater.jpg"></img>
         </div>
         <div class="col">
         </div>
       </div>
-      <div class="row" style="margin-top:10px;">
+      <div class="row top-margin">
         <div class="col">
         </div>
         <div class="col" align="center">
@@ -46,7 +57,7 @@
         <div id="inferenceTime" class="col" align="center">
         </div>
       </div>
-      <div class="row" style="margin-top:10px;">
+      <div class="row top-margin">
         <div class="col"></div>
         <div class="col">
             <table class="table table-sm">
@@ -61,7 +72,7 @@
                   <tr>
                     <th scope="row">1</th>
                     <td id="label0"></td>
-                    <td id="prob0">Thornton</td>
+                    <td id="prob0"></td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
