--- a/examples/mobilenet/index.html
+++ b/examples/mobilenet/index.html
@@ -93,7 +93,7 @@
       </div>
     </div>
     <canvas id="canvas" width=224 height=224></canvas>
-    <script src="/dist/webml-polyfill.js"></script>
+    <script src="../../dist/webml-polyfill.js"></script>
     <script src="./flatbuffers/js/flatbuffers.js"></script>
     <script src="./schema/schema_generated.js"></script>
     <script src="TfLiteModelUtils.js"></script>
