--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>WebML Benchmark</title>
-    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,fetch"></script>
     <script src="../dist/webml-polyfill.js"></script>
     <script src="../examples/mobilenet/flatbuffers/js/flatbuffers.js"></script>
     <script src="../examples/mobilenet/schema/schema_generated.js"></script>
@@ -13,32 +12,32 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <style>
       body {
-      font-size: 13px;
+        font-size: 13px;
       }
       img {
-      max-height: 400px;
+        max-height: 400px;
       }
       canvas {
-      display: none;
-      position: absolute;
-      z-index: -3;
+        display: none;
+        position: absolute;
+        z-index: -3;
       }
       .top-margin {
-      margin-top:10px;
+        margin-top:10px;
       }
       h1, h4 {
-      margin: 24px 0 0;
+        margin: 24px 0 0;
       }
       h1 { 
-      font-size: 2.0em;
+        font-size: 2.0em;
       }
       h4 {
-      font-size: 1.2em;
+        font-size: 1.2em;
       }
       pre {
-      font-family: 'Consolas', 'Monaco', monospace, serif;
-      font-size: 12px;
-      tab-size: 2;
+        font-family: 'Consolas', 'Monaco', monospace, serif;
+        font-size: 12px;
+        tab-size: 2;
       }
     </style>
   </head>
@@ -62,10 +61,6 @@
             <h4>Iterations</h4>
             1(warming up) + <input type="number" id="iteration" min="1" size="4" value="3"/>
           </div>
-          <div>
-            <h4>Batch Size</h4>
-            <input type="number" id="batchSize" size="4" min="1" value="1"/>
-          </div>
           <div class="row top-margin">
             <div class="col">
             </div>
@@ -80,8 +75,7 @@
             <div class="col">
             </div>
             <div class="col" align="center">
-              <label id="pickButton" class="btn btn-primary">
-              Pick Image <input type="file" id="input" accept="image/*" hidden>
+              <label id="pickButton" class="btn btn-primary">Pick Image <input type="file" id="input" accept="image/*" hidden>
               </label>
             </div>
             <div class="col">
@@ -89,7 +83,7 @@
           </div>
           <canvas id="canvas" width=224 height=224></canvas>
           <button type="button" id="runButton" class="btn btn-primary disabled">Run</button>
-          (It will take several minutes)
+            (It will take several minutes)
           <div>
             <pre id="log"></pre>
           </div>
