--- a/examples/mobilenet/camera.html
+++ b/examples/mobilenet/camera.html
@@ -74,7 +74,12 @@
                 </tbody>
               </table>
         </div>
-        <div class="col"></div>
+        <div class="col">
+          <div class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" id="WebGL2">
+            <label for="WebGL2" class = "custom-control-label" id="checkboxLable">WebGL2</label>
+          </div>
+        </div>
       </div>
     </div>
     <canvas id="canvas" width=224 height=224></canvas>
