--- a/examples/mobilenet/index.html
+++ b/examples/mobilenet/index.html
@@ -53,6 +53,10 @@
             </label>
         </div>
         <div class="col">
+          <div class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" id="WebGL2">
+            <label for="WebGL2" class = "custom-control-label" id="checkboxLable">WebGL2</label>
+          </div>
         </div>
       </div>
       <div class="row">
