[Example] Add dropdown menu of backends

--- a/examples/mobilenet/camera.html
+++ b/examples/mobilenet/camera.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>WebML MobileNet Camera Demo</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
       video {
         max-height: 360px;
@@ -27,6 +27,15 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
       <span class="navbar-brand mb-0 h1">WebML MobileNet Camera Demo</span>
+      <div class="btn-group">
+          <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          </button>
+          <div class="dropdown-menu dropdown-menu-right">
+            <button class="dropdown-item disabled" type="button" id="wasm">WASM</button>
+            <button class="dropdown-item disabled" type="button" id="webgl">WebGL2</button>
+            <button class="dropdown-item disabled" type="button" id="webml">WebML</button>
+          </div>
+        </div>
     </nav>
     <div class="container" id="container">
       <div id="progressContainer">
@@ -75,14 +84,13 @@
               </table>
         </div>
         <div class="col">
-          <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="WebGL2">
-            <label for="WebGL2" class = "custom-control-label" id="checkboxLable">WebGL2</label>
-          </div>
         </div>
       </div>
     </div>
     <canvas id="canvas" width=224 height=224></canvas>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="../../dist/webml-polyfill.js"></script>
     <script src="./flatbuffers/js/flatbuffers.js"></script>
     <script src="./schema/schema_generated.js"></script>
