[Example] Add setting indicator when change backend

--- a/examples/mobilenet/camera.html
+++ b/examples/mobilenet/camera.html
@@ -26,9 +26,10 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
-      <span class="navbar-brand mb-0 h1">WebML MobileNet Camera Demo</span>
+      <span class="navbar-brand mb-0 h1">WebML MobileNet Demo</span>
       <div class="btn-group">
           <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Setting...
           </button>
           <div class="dropdown-menu dropdown-menu-right">
             <button class="dropdown-item disabled" type="button" id="wasm">WASM</button>
