--- a/examples/mobilenet/index.html
+++ b/examples/mobilenet/index.html
@@ -29,7 +29,7 @@
       <span class="navbar-brand mb-0 h1">WebML MobileNet Demo</span>
       <div class="btn-group">
         <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          WebML
+          Setting...
         </button>
         <div class="dropdown-menu dropdown-menu-right">
           <button class="dropdown-item disabled" type="button" id="wasm">WASM</button>
