--- a/examples/mobilenet/camera.html
+++ b/examples/mobilenet/camera.html
@@ -40,9 +40,17 @@
     </nav>
     <div class="container" id="container">
       <div id="progressContainer">
-        <div class="progress-label">Loading Model:</div>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="progressBar">0%</div>
+        <div class="row">
+          <div class="col">
+          </div>
+          <div class="col-8" align="center">
+              <div class="progress-label">Loading Model:</div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="progressBar">0%</div>
+              </div>
+          </div>
+          <div class="col">
+          </div>
         </div>
       </div>
       <div class="row top-margin">
