--- a/test/wpt/webml/idlharness.html
+++ b/test/wpt/webml/idlharness.html
@@ -10,7 +10,7 @@
 "use strict";
 promise_test(async () => {
   const idl_array = new IdlArray();
-  const ml_idl = await fetch("../interfaces/webml.idl").then(r => r.text());
+  const ml_idl = await fetch("../../../docs/webml.idl").then(r => r.text());
   idl_array.add_untested_idls('interface Navigator {};');
   idl_array.add_idls(ml_idl);
   idl_array.add_objects({
