--- a/examples/ssd_mobilenet/index.html
+++ b/examples/ssd_mobilenet/index.html
@@ -2,13 +2,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>WebML MobileNet Demo</title>
+    <title>WebML SSD MobileNet Demo</title>
     <link rel="stylesheet" href="../third_party/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
       img {
+        display: none;
         max-height: 400px;
       }
-      canvas {
+      #canvas {
         display: none;
         position: absolute;
         z-index: -3;
@@ -26,7 +27,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
-      <span class="navbar-brand mb-0 h1">WebML MobileNet Demo</span>
+      <span class="navbar-brand mb-0 h1">WebML SSD MobileNet Demo</span>
       <div class="btn-group">
         <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Setting...
@@ -58,6 +59,7 @@
         </div>
         <div class="col-8" align="center">
           <img id="image" crossorigin="anonymous" class="img-fluid" alt="Responsive image" src="./img/image1.jpg"></img>
+          <canvas id="canvasShow" width=400 height=400></canvas>
         </div>
         <div class="col">
         </div>
@@ -77,50 +79,18 @@
         <div id="inferenceTime" class="col" align="center">
         </div>
       </div>
-      <div class="row top-margin">
-        <div class="col"></div>
-        <div class="col">
-            <table class="table table-sm">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Label</th>
-                    <th scope="col">Probability</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td id="label0"></td>
-                    <td id="prob0"></td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td id="label1"></td>
-                    <td id="prob1"></td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td id="label2"></td>
-                    <td id="prob2"></td>
-                  </tr>
-                </tbody>
-              </table>
-        </div>
-        <div class="col"></div>
-      </div>
     </div>
-    <canvas id="canvas" width=224 height=224></canvas>
+    <canvas id="canvas" width=300 height=300></canvas>
     <script src="../third_party/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="../third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="../third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="../../dist/webml-polyfill.js"></script>
-    <script src="./flatbuffers/js/flatbuffers.js"></script>
-    <script src="./schema/schema_generated.js"></script>
-    <script src="TfLiteModelUtils.js"></script>
+    <script src="../mobilenet/flatbuffers/js/flatbuffers.js"></script>
+    <script src="../mobilenet/schema/schema_generated.js"></script>
+    <script src="../mobilenet/TfLiteModelUtils.js"></script>
     <script src="MobileNet.js"></script>
     <script src="utils.js"></script>
-    <script src="main.js"></script>
+    <script src="../mobilenet/main.js"></script>
     <script>
       window.onload = function() {
         main();
