--- a/examples/mobilenet/camera.html
+++ b/examples/mobilenet/camera.html
@@ -102,6 +102,7 @@
     <script src="../third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="../third_party/stats.min.js"></script>
     <script src="../../dist/webml-polyfill.js"></script>
+    <script src="../util/base.js"></script>
     <script src="./flatbuffers/js/flatbuffers.js"></script>
     <script src="./schema/schema_generated.js"></script>
     <script src="TfLiteModelUtils.js"></script>
