--- a/test/index.html
+++ b/test/index.html
@@ -10,15 +10,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/4.0.1/mocha.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.1.2/chai.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
-  
     <script src="../dist/webml-polyfill.js"></script>
     <script src="./utils.js"></script>
-
     <script>
       mocha.setup('bdd');
     </script>
     <script src="./base/base.js"></script>
     <script src="./unit-test/test-Model.js"></script>
+    <script src="./unit-test/test-Compilation.js"></script>
+    <script src="./unit-test/test-Execution.js"></script>
     <script src="./operations/add.js"></script>
     <script src="./operations/mul.js"></script>
     <script>
