--- a/examples/ssd_mobilenet/index.html
+++ b/examples/ssd_mobilenet/index.html
@@ -85,10 +85,11 @@
     <script src="../third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="../third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="../../dist/webml-polyfill.js"></script>
+    <script src="../util/base.js"></script>
     <script src="../mobilenet/flatbuffers/js/flatbuffers.js"></script>
     <script src="../mobilenet/schema/schema_generated.js"></script>
     <script src="../mobilenet/TfLiteModelUtils.js"></script>
-    <script src="MobileNet.js"></script>
+    <script src="SsdMobileNet.js"></script>
     <script src="utils.js"></script>
     <script src="../mobilenet/main.js"></script>
     <script>
