--- a/examples/posnet/index.html
+++ b/examples/posnet/index.html
@@ -9,6 +9,8 @@
         <script src="load.js"></script>
         <script src = "test.js"></script>
         <script src = "PoseNet.js"></script>
+        <script src = "Maxheap.js"></script>
+        <script src = "decodePose.js"></script>
         <script src = "main.js"></script>
         
     </head>
