--- a/examples/posnet/index.html
+++ b/examples/posnet/index.html
@@ -1,20 +1,47 @@
 <html>
     <head> 
-        <canvas id = "canvas" width = "513" height = "513"></canvas>
-        <script src="webml-polyfill/examples/third_party/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="webml-polyfill/examples/third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="webml-polyfill/examples/third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="webml-polyfill/dist/webml-polyfill.js"></script>
-        <script src="webml-polyfill/examples/util/base.js"></script>
-        <script src="load.js"></script>
-        <script src = "test.js"></script>
-        <script src = "PoseNet.js"></script>
-        <script src = "Maxheap.js"></script>
-        <script src = "decodePose.js"></script>
-        <script src = "main.js"></script>
-        
+        <title> PoseNet Image Demo</title>
+
     </head>
+
     <body>
-        Hello World!
+        <div class = parameter>
+            <h4>Parameter</h4>
+            <form>
+                Output Stride:<br>
+                <input type = "number" id = "outputStride"><br>
+                Minimal Part Confidence Score:<br>
+                <input type = "number" id= "minpartConfidenceScore"><br>
+                Model: <br>
+                <input type = "number" id= "modelversion"><br>
+                nmsRadius: <br>
+                <input type = "number" id= "nmsRadius"><br>
+                maxDetection: <br>
+                <input type = "number" id = "maxDetection"><br>
+                <input type = "file" id = "image" accept="image/*"><br>
+                <input type= "button" value="Submit" onclick="DrawSingleandMulti()" />
+            </form>
+        </div>
+        <div class = "single">
+            <h4>Single Pose Estimation</h4>
+            <canvas id = "canvas" width = "513" height = "513"></canvas>
+        </div>
+        <div class = "Multiple">
+            <h4>Multiple Poses Estimation</h4>
+            <canvas id = "canvas_2" width = "513" height = "513"></canvas>
+        </div>
+            <script src = "http://www.dukelearntoprogram.com/course1/common/js/image/SimpleImage.js"></script>
+            <script src="webml-polyfill/examples/third_party/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+            <script src="webml-polyfill/examples/third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+            <script src="webml-polyfill/examples/third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+            <script src="webml-polyfill/dist/webml-polyfill.js"></script>
+            <script src="webml-polyfill/examples/util/base.js"></script>
+            <script src="load.js"></script>
+            <script src = "test.js"></script>
+            <script src = "PoseNet.js"></script>
+            <script src = "Maxheap.js"></script>
+            <script src = "decodePose.js"></script>
+            <script src = "Drawoutput.js"></script>
+            <script src = "main.js"></script>       
     </body>
 </html>
