--- a/examples/posenet/Posenet.html
+++ b/examples/posenet/Posenet.html
@@ -31,13 +31,13 @@
             <canvas id = "canvas_2" width = "513" height = "513"></canvas>
         </div>
             <script src = "http://www.dukelearntoprogram.com/course1/common/js/image/SimpleImage.js"></script>
-            <script src="webml-polyfill/examples/third_party/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-            <script src="webml-polyfill/examples/third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-            <script src="webml-polyfill/examples/third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-            <script src="webml-polyfill/dist/webml-polyfill.js"></script>
-            <script src="webml-polyfill/examples/util/base.js"></script>
-            <script src="load.js"></script>
-            <script src = "test.js"></script>
+            <script src="../third_party/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+            <script src="../third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+            <script src="../third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+            <script src="../../dist/webml-polyfill.js"></script>
+            <script src="../util/base.js"></script>
+            <script src= "utils.js"></script>
+            <script src = "helperFunc.js"></script>
             <script src = "PoseNet.js"></script>
             <script src = "Maxheap.js"></script>
             <script src = "decodePose.js"></script>
