delete console log

--- a/examples/posenet/Posenet.html
+++ b/examples/posenet/Posenet.html
@@ -8,11 +8,11 @@
         <div class = parameter>
             <h4>Parameter</h4>
             <form>
-                Output Stride:<br>
+                Output Stride(8/16/32):<br>
                 <input type = "number" id = "outputStride"><br>
-                Minimal Part Confidence Score:<br>
+                Minimal Part Confidence Score(0, 1):<br>
                 <input type = "number" id= "minpartConfidenceScore"><br>
-                Model: <br>
+                Model(0.5/0.75/1.0/1.01): <br>
                 <input type = "number" id= "modelversion"><br>
                 nmsRadius: <br>
                 <input type = "number" id= "nmsRadius"><br>
