[PoseNet] fix code style

--- a/examples/posenet/Posenet.html
+++ b/examples/posenet/Posenet.html
@@ -22,6 +22,10 @@
                 <input type= "button" value="Submit" onclick="DrawSingleandMulti()" />
             </form>
         </div>
+        <div class="btn-group">
+
+        </div>
+
         <div class = "single">
             <h4>Single Pose Estimation</h4>
             <canvas id = "canvas" width = "513" height = "513"></canvas>
@@ -39,9 +43,9 @@
             <script src= "utils.js"></script>
             <script src = "helperFunc.js"></script>
             <script src = "PoseNet.js"></script>
-            <script src = "Maxheap.js"></script>
+            <script src = "MaxHeap.js"></script>
             <script src = "decodePose.js"></script>
-            <script src = "Drawoutput.js"></script>
-            <script src = "main.js"></script>       
+            <script src = "DrawOutputs.js"></script>
+            <script src = "main.js"></script>     
     </body>
 </html>
