--- a/examples/posenet/cameraDemo/camera.html
+++ b/examples/posenet/cameraDemo/camera.html
@@ -37,9 +37,9 @@
         	<canvas id="canvas" width = "500" height = "500"/></canvas>
         	<canvas id="canvas_2"/></canvas>
     	</div>
-    	<script src = "../webml-polyfill/examples/third_party/stats.min.js"></script>
-    	<script src = "../webml-polyfill/dist/webml-polyfill.js"></script>
-        <script src = "../webml-polyfill/examples/util/base.js"></script>
+    	<script src = "../../third_party/stats.min.js"></script>
+    	<script src = "../../../dist/webml-polyfill.js"></script>
+        <script src = "../../util/base.js"></script>
     	<script src = "utilCamera.js"></script>
         <script src = "../src/helperFunc.js"></script>
         <script src = "../src/PoseNet.js"></script>
