--- a/examples/posenet/imageDemo/PoseNet.html
+++ b/examples/posenet/imageDemo/PoseNet.html
@@ -39,9 +39,9 @@
             <h4>Multiple Poses Estimation</h4>
             <canvas id = "canvas_2" width = "513" height = "513"></canvas>
         </div>
-            <script src="../webml-polyfill/dist/webml-polyfill.js"></script>
-            <script src="../webml-polyfill/examples/util/base.js"></script>
-            <script src= "utils.js"></script>
+            <script src = "../../../dist/webml-polyfill.js"></script>
+            <script src = "../../util/base.js"></script>
+            <script src = "utils.js"></script>
             <script src = "../src/helperFunc.js"></script>
             <script src = "../src/PoseNet.js"></script>
             <script src = "../src/MaxHeap.js"></script>
