--- a/examples/posenet/index.html
+++ b/examples/posenet/index.html
@@ -6,8 +6,8 @@
   <body>
     <h1>PoseNet Demos</h1>
     <ul>
-      <li><a href='../cameraDemo/camera.html'>Camera feed demo</a></li>
-      <li><a href='../imageDemo/PoseNet.html'>Image demo</a></li>
+      <li><a href='cameraDemo/camera.html'>Camera feed demo</a></li>
+      <li><a href='imageDemo/PoseNet.html'>Image demo</a></li>
     </ul>
   </body>
 </html>
