--- a/examples/posenet/cameraDemo/camera.html
+++ b/examples/posenet/cameraDemo/camera.html
@@ -8,10 +8,16 @@
             <h4>Parameter</h4>
             Backend:
             <select id = "backend">
-                <option value = "webgl">WebGL</option>
                 <option value = "webml">WebML</option>
                 <option value = "wasm">WASM</option>
                 <option selected = "selected">WebGL</option>
+            </select>
+            <br>
+            <br>
+            Type:
+            <select id = "type">
+                <option value = "Single">Single Person</option>
+                <option selected = "selected">Multiple Person</option>
             </select>
            
             <form>
@@ -27,7 +33,7 @@
                 <input type = "number" id= "nmsRadius" value = "20"><br>
                 maxDetection: <br>
                 <input type = "number" id = "maxDetection" value="15"><br>
-                <input type= "button" value="Submit" onclick="predictResult()" />
+                <input type= "button" value="Submit" onclick="main()" />
             </form>
         </div>
 		
@@ -35,7 +41,7 @@
 			<h4> Camera Demo</h4>
 			<video hidden id = "video" width = "500" height = "500" autoplay></video>
         	<canvas id="canvas" width = "500" height = "500"/></canvas>
-        	<canvas id="canvas_2"/></canvas>
+        	<canvas hidden id="canvas_2"/></canvas>
     	</div>
     	<script src = "../../third_party/stats.min.js"></script>
     	<script src = "../../../dist/webml-polyfill.js"></script>
