--- a/examples/posenet/imageDemo/PoseNet.html
+++ b/examples/posenet/imageDemo/PoseNet.html
@@ -1,7 +1,11 @@
 <html>
     <head> 
         <title> PoseNet Image Demo</title>
-
+        <style>
+            .Single,.Multiple {
+                display: inline-block;
+            }
+        </style>
     </head>
 
     <body>
@@ -18,19 +22,18 @@
                 Output Stride(8/16/32):<br>
                 <input onchange = "DrawSingleandMulti();" type = "number" id = "outputStride" value="16"><br>
                 Minimal Part Confidence Score(0, 1):<br>
-                <input onchange = "DrawSingleandMulti();" type = "number" id= "minpartConfidenceScore" value = "0.5"><br>
+                <input onchange = "updateParameter();" type = "number" id= "minpartConfidenceScore" value = "0.5"><br>
                 Model(0.5/0.75/1.0/1.01): <br>
                 <input onchange = "DrawSingleandMulti();" type = "number" id= "modelversion" value="1.01"><br>
                 nmsRadius: <br>
-                <input onchange = "DrawSingleandMulti();" type = "number" id= "nmsRadius" value="20"><br>
+                <input onchange = "updateParameter();" type = "number" id= "nmsRadius" value="20"><br>
                 maxDetection: <br>
-                <input onchange = "DrawSingleandMulti();" type = "number" id = "maxDetection" value="15"><br>
-                <input onchange = "changeImage();" type = "file" id = "image" accept="image/*"><br>
-                <input type= "button" value="Submit" onclick="DrawSingleandMulti()" />
+                <input onchange = "updateParameter();" type = "number" id = "maxDetection" value="15"><br>
+                <input onchange = "updateParameter();" type = "file" id = "image" accept="image/*"><br>
             </form>
         </div>
 
-        <div class = "single">
+        <div class = "Single">
             <h4>Single Pose Estimation</h4>
             <canvas id = "canvas" width = "513" height = "513"></canvas>
         </div>
