[Posenet] Reivse code

--- a/examples/posenet/index.html
+++ b/examples/posenet/index.html
@@ -7,7 +7,7 @@
     <h1>PoseNet Demos</h1>
     <ul>
       <li><a href='cameraDemo/camera.html'>Camera feed demo</a></li>
-      <li><a href='imageDemo/PoseNet.html'>Image demo</a></li>
+      <li><a href='imageDemo/imageDemo.html'>Image demo</a></li>
     </ul>
   </body>
 </html>
