--- a/examples/posenet/camera.html
+++ b/examples/posenet/camera.html
@@ -17,11 +17,11 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
       <span class="navbar-brand mb-0 h1">WebML PoseNet Camera Demo</span>
       <div class="btn-group">
-	<select onchange = "main();" id = "backend" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	  <option value = "webml">WebML</option>
-	  <option value = "wasm">WASM</option>
-	  <option selected = "selected">WebGL</option>
-	</select>
+        <select onchange = "main();" id = "backend" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <option value = "webml">WebML</option>
+          <option value = "wasm">WASM</option>
+          <option selected = "selected">WebGL</option>
+        </select>
       </div>
     </nav>
     <div id = "loading">
@@ -36,17 +36,17 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src = "../../third_party/stats.min.js"></script>
-    <script src = "../../../dist/webml-polyfill.js"></script>
-    <script src = "../../util/base.js"></script>
-    <script src = "utilCamera.js"></script>
-    <script src = "../src/helperFunc.js"></script>
-    <script src = "../src/PoseNet.js"></script>
-    <script src = "../src/MaxHeap.js"></script>
-    <script src = "../src/decodePose.js"></script>
-    <script src = "../src/DrawOutputs.js"></script>
-    <script src = "../src/dat.gui.js"></script>
+    <script src = "../third_party/stats.min.js"></script>
+    <script src = "../../dist/webml-polyfill.js"></script>
+    <script src = "../util/base.js"></script>
+    <script src = "src/helperFunc.js"></script>
+    <script src = "src/PoseNet.js"></script>
+    <script src = "src/MaxHeap.js"></script>
+    <script src = "src/decodePose.js"></script>
+    <script src = "src/DrawOutputs.js"></script>
+    <script type= "text/javascript" src="../third_party/dat.gui.js"></script>
     <script src = "cameraGui.js"></script>
+    <script src = "utils.js"></script>
     <script src = "camera.js"></script>   
-</body>
+  </body>
 </html>
