[PoseNet] optimize the UI

--- a/examples/posenet/camera.html
+++ b/examples/posenet/camera.html
@@ -74,7 +74,7 @@
           <div class = "cameraCanvas" align="center">
             <canvas id = "canvas" width = "500" height = "500"></canvas>
           </div>
-          <canvas hidden id = "scaleCanvas"></canvas>
+          <canvas hidden id = "scaleCanvas" width = "500" height = "500"></canvas>
           <video  hidden id = "video" autoplay></video>
         </div>
       </div>
