[benchmark][examples] Extract decode/draw funcitons of ssd mobilenet example into DrawOutputs.js.

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -103,6 +103,7 @@
     <script src="../examples/posenet/utils.js"></script>
     <script src="../examples/posenet/src/PoseNet.js"></script>
     <script src="../examples/posenet/src/DrawOutputs.js"></script>
+    <script src="../examples/ssd_mobilenet/DrawOutputs.js"></script>
     <script src="../examples/ssd_mobilenet/SsdMobileNet.js"></script>
     <script src="index.js"></script>
   </body>
