--- a/examples/ssd_mobilenet/index.html
+++ b/examples/ssd_mobilenet/index.html
@@ -90,6 +90,7 @@
     <script src="../mobilenet/schema/schema_generated.js"></script>
     <script src="../mobilenet/TfLiteModelUtils.js"></script>
     <script src="SsdMobileNet.js"></script>
+    <script src="DrawOutputs.js"></script>
     <script src="utils.js"></script>
     <script src="../mobilenet/main.js"></script>
     <script>
