--- a/examples/ssd_mobilenet/camera.html
+++ b/examples/ssd_mobilenet/camera.html
@@ -76,6 +76,7 @@
     <script src="../mobilenet/schema/schema_generated.js"></script>
     <script src="../mobilenet/TfLiteModelUtils.js"></script>
     <script src="SsdMobileNet.js"></script>
+    <script src="DrawOutputs.js"></script>
     <script src="utils.js"></script>
     <script src="../mobilenet/camera.js"></script>
     <script>
